# File-Compression-System

./: .gitignore  README.md
compression/: CMakeLists.txt  test.txt
decompression/: CMakeLists.txt
src/: HaffManTree.cpp  Node.cpp  main.cpp  mainwindow.cpp  my_prior_queue.cpp
src/forms/: mainwindow.ui
src/headers/: HaffManTree.h  Node.h  mainwindow.h  my_prior_queue.h
